Reorganize configuration properties, add FLOAT3 number type, and update references to new structure